syntax = "proto3";

package account.v1;

option go_package = "github.com/ryo034/react-go-template/apps/system/api/schema/pb/account/v1";

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_MAN = 1;
  GENDER_WOMAN = 2;
  GENDER_UNKNOWN = 3;
}
